--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 simplejson
+pip install Google-Search-API
 Pillow
 opencv-contrib-python
 pytesseract
-google-cloud-vision
 beautifulsoup4
-Vocabulary
+pyscreenshot
 lxml
-Wikipedia-API
+wikipedia
