Added more words to remove

--- a/Data/settings.json
+++ b/Data/settings.json
@@ -36,7 +36,15 @@
     "it",
     "not",
     "we",
+    "means",
+    "you",
+    "comes",
+    "came",
+    "come",
+    "about",
     "if",
+    "by",
+    "from",
     "go",
     "?",
     ",",
